--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 3,
-  "name": "Capture The Screen",
-  "description": "Take screenshots of the current webpage and save them to your local machine.",
+  "name": "Ads-blocker",
+  "description": "Ads-blocker",
   "version": "1.0",
   "permissions": ["activeTab"],
   "action": {
